--- a/image_generator.ipynb
+++ b/image_generator.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 155,
+   "execution_count": 227,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 156,
+   "execution_count": 228,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 157,
+   "execution_count": 229,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 158,
+   "execution_count": 230,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,51 +71,6 @@
     "\n",
     "def mask_path(_id: int):\n",
     "  return f'./train/train/masks/' + mask_name(_id)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Defaulting to user installation because normal site-packages is not writeable\n",
-      "Collecting albumentations\n",
-      "  Downloading albumentations-1.3.1-py3-none-any.whl.metadata (34 kB)\n",
-      "Requirement already satisfied: numpy>=1.11.1 in /home/denis/.local/lib/python3.10/site-packages (from albumentations) (1.24.1)\n",
-      "Requirement already satisfied: scipy>=1.1.0 in /home/denis/.local/lib/python3.10/site-packages (from albumentations) (1.11.3)\n",
-      "Requirement already satisfied: scikit-image>=0.16.1 in /home/denis/.local/lib/python3.10/site-packages (from albumentations) (0.22.0)\n",
-      "Requirement already satisfied: PyYAML in /usr/lib/python3/dist-packages (from albumentations) (5.4.1)\n",
-      "Collecting qudida>=0.0.4 (from albumentations)\n",
-      "  Downloading qudida-0.0.4-py3-none-any.whl (3.5 kB)\n",
-      "Collecting opencv-python-headless>=4.1.1 (from albumentations)\n",
-      "  Downloading opencv_python_headless-4.8.1.78-cp37-abi3-manylinux_2_17_x86_64.manylinux2014_x86_64.whl.metadata (19 kB)\n",
-      "Requirement already satisfied: scikit-learn>=0.19.1 in /home/denis/.local/lib/python3.10/site-packages (from qudida>=0.0.4->albumentations) (1.3.2)\n",
-      "Requirement already satisfied: typing-extensions in /home/denis/.local/lib/python3.10/site-packages (from qudida>=0.0.4->albumentations) (4.8.0)\n",
-      "Collecting networkx>=2.8 (from scikit-image>=0.16.1->albumentations)\n",
-      "  Downloading networkx-3.2.1-py3-none-any.whl.metadata (5.2 kB)\n",
-      "Requirement already satisfied: pillow>=9.0.1 in /usr/lib/python3/dist-packages (from scikit-image>=0.16.1->albumentations) (9.0.1)\n",
-      "Requirement already satisfied: imageio>=2.27 in /home/denis/.local/lib/python3.10/site-packages (from scikit-image>=0.16.1->albumentations) (2.32.0)\n",
-      "Requirement already satisfied: tifffile>=2022.8.12 in /home/denis/.local/lib/python3.10/site-packages (from scikit-image>=0.16.1->albumentations) (2023.9.26)\n",
-      "Requirement already satisfied: packaging>=21 in /home/denis/.local/lib/python3.10/site-packages (from scikit-image>=0.16.1->albumentations) (23.2)\n",
-      "Requirement already satisfied: lazy_loader>=0.3 in /home/denis/.local/lib/python3.10/site-packages (from scikit-image>=0.16.1->albumentations) (0.3)\n",
-      "Requirement already satisfied: joblib>=1.1.1 in /home/denis/.local/lib/python3.10/site-packages (from scikit-learn>=0.19.1->qudida>=0.0.4->albumentations) (1.3.2)\n",
-      "Requirement already satisfied: threadpoolctl>=2.0.0 in /home/denis/.local/lib/python3.10/site-packages (from scikit-learn>=0.19.1->qudida>=0.0.4->albumentations) (3.2.0)\n",
-      "Downloading albumentations-1.3.1-py3-none-any.whl (125 kB)\n",
-      "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m125.7/125.7 kB\u001b[0m \u001b[31m732.9 kB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0ma \u001b[36m0:00:01\u001b[0m\n",
-      "\u001b[?25hDownloading opencv_python_headless-4.8.1.78-cp37-abi3-manylinux_2_17_x86_64.manylinux2014_x86_64.whl (49.1 MB)\n",
-      "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m49.1/49.1 MB\u001b[0m \u001b[31m237.6 kB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m00:01\u001b[0m00:06\u001b[0m\n",
-      "\u001b[?25hDownloading networkx-3.2.1-py3-none-any.whl (1.6 MB)\n",
-      "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m1.6/1.6 MB\u001b[0m \u001b[31m207.6 kB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m00:01\u001b[0m00:01\u001b[0m\n",
-      "\u001b[?25h"
-     ]
-    }
-   ],
-   "source": [
-    "!pip install albumentations"
    ]
   },
   {
@@ -144,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 173,
+   "execution_count": 231,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -168,8 +123,13 @@
     "\n",
     "\n",
     "def transform_image(image):\n",
+    "  \n",
+    "  '''\n",
+    "  Optical transforms\n",
+    "  '''\n",
+    "  \n",
     "  transform = A.Compose([\n",
-    "      A.HorizontalFlip(p=0.5),\n",
+    "      # A.HorizontalFlip(p=0.5),\n",
     "      # A.ShiftScaleRotate(border_mode=cv2.BORDER_CONSTANT, \n",
     "      #                     scale_limit=0.3,\n",
     "      #                     rotate_limit=(-180, 180),\n",
@@ -188,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 175,
+   "execution_count": 232,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -257,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 223,
+   "execution_count": 234,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -275,6 +235,7 @@
     "  height = base_image_height // k\n",
     "\n",
     "  index = 0\n",
+    "  fragments_array = []\n",
     "  \n",
     "  for i in range(1, k+1):\n",
     "    for j in range(1, k+1):\n",
@@ -299,7 +260,16 @@
     "      image_crop.save(images_folder_path + _image_name, quality=95)\n",
     "      mask_crop.save(masks_folder_path + _mask_name, quality=95)\n",
     "      \n",
-    "      index += 1"
+    "      index += 1\n",
+    "      \n",
+    "      fragments_array.append([\n",
+    "          image_id,\n",
+    "          k,\n",
+    "          images_folder_path + _image_name,\n",
+    "          masks_folder_path + _mask_name,\n",
+    "      ])\n",
+    "\n",
+    "  return fragments_array\n"
    ]
   },
   {
@@ -311,7 +281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 220,
+   "execution_count": 240,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -344,8 +314,15 @@
     "  \n",
     "  rotation_generator = get_rotation()\n",
     "  \n",
+    "  fragments_array = []\n",
+    "  \n",
     "  for k in range(1, n_splits + 1):\n",
-    "    get_fragments(image_id, rotation_generator, k)\n"
+    "    fragments_array += get_fragments(image_id, rotation_generator, k)\n",
+    "  \n",
+    "  df = pd.DataFrame(fragments_array)\n",
+    "  headers =  [\"id\", \"n_splits\", \"image_path\", \"mask_path\"]\n",
+    "  df.columns = headers\n",
+    "  return df\n"
    ]
   },
   {
@@ -357,18 +334,203 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 241,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>id</th>\n",
+       "      <th>n_splits</th>\n",
+       "      <th>image_path</th>\n",
+       "      <th>mask_path</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>train_splitted/images/image_1_fragment_0_k_1.png</td>\n",
+       "      <td>train_splitted/masks/mask_1_fragment_0_k_1.png</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>train_splitted/images/image_1_fragment_0_k_2.png</td>\n",
+       "      <td>train_splitted/masks/mask_1_fragment_0_k_2.png</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>train_splitted/images/image_1_fragment_1_k_2.png</td>\n",
+       "      <td>train_splitted/masks/mask_1_fragment_1_k_2.png</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>train_splitted/images/image_1_fragment_2_k_2.png</td>\n",
+       "      <td>train_splitted/masks/mask_1_fragment_2_k_2.png</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>train_splitted/images/image_1_fragment_3_k_2.png</td>\n",
+       "      <td>train_splitted/masks/mask_1_fragment_3_k_2.png</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1491</th>\n",
+       "      <td>1</td>\n",
+       "      <td>16</td>\n",
+       "      <td>train_splitted/images/image_1_fragment_251_k_1...</td>\n",
+       "      <td>train_splitted/masks/mask_1_fragment_251_k_16.png</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1492</th>\n",
+       "      <td>1</td>\n",
+       "      <td>16</td>\n",
+       "      <td>train_splitted/images/image_1_fragment_252_k_1...</td>\n",
+       "      <td>train_splitted/masks/mask_1_fragment_252_k_16.png</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1493</th>\n",
+       "      <td>1</td>\n",
+       "      <td>16</td>\n",
+       "      <td>train_splitted/images/image_1_fragment_253_k_1...</td>\n",
+       "      <td>train_splitted/masks/mask_1_fragment_253_k_16.png</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1494</th>\n",
+       "      <td>1</td>\n",
+       "      <td>16</td>\n",
+       "      <td>train_splitted/images/image_1_fragment_254_k_1...</td>\n",
+       "      <td>train_splitted/masks/mask_1_fragment_254_k_16.png</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1495</th>\n",
+       "      <td>1</td>\n",
+       "      <td>16</td>\n",
+       "      <td>train_splitted/images/image_1_fragment_255_k_1...</td>\n",
+       "      <td>train_splitted/masks/mask_1_fragment_255_k_16.png</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>1496 rows × 4 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      id  n_splits                                         image_path  \\\n",
+       "0      1         1   train_splitted/images/image_1_fragment_0_k_1.png   \n",
+       "1      1         2   train_splitted/images/image_1_fragment_0_k_2.png   \n",
+       "2      1         2   train_splitted/images/image_1_fragment_1_k_2.png   \n",
+       "3      1         2   train_splitted/images/image_1_fragment_2_k_2.png   \n",
+       "4      1         2   train_splitted/images/image_1_fragment_3_k_2.png   \n",
+       "...   ..       ...                                                ...   \n",
+       "1491   1        16  train_splitted/images/image_1_fragment_251_k_1...   \n",
+       "1492   1        16  train_splitted/images/image_1_fragment_252_k_1...   \n",
+       "1493   1        16  train_splitted/images/image_1_fragment_253_k_1...   \n",
+       "1494   1        16  train_splitted/images/image_1_fragment_254_k_1...   \n",
+       "1495   1        16  train_splitted/images/image_1_fragment_255_k_1...   \n",
+       "\n",
+       "                                              mask_path  \n",
+       "0        train_splitted/masks/mask_1_fragment_0_k_1.png  \n",
+       "1        train_splitted/masks/mask_1_fragment_0_k_2.png  \n",
+       "2        train_splitted/masks/mask_1_fragment_1_k_2.png  \n",
+       "3        train_splitted/masks/mask_1_fragment_2_k_2.png  \n",
+       "4        train_splitted/masks/mask_1_fragment_3_k_2.png  \n",
+       "...                                                 ...  \n",
+       "1491  train_splitted/masks/mask_1_fragment_251_k_16.png  \n",
+       "1492  train_splitted/masks/mask_1_fragment_252_k_16.png  \n",
+       "1493  train_splitted/masks/mask_1_fragment_253_k_16.png  \n",
+       "1494  train_splitted/masks/mask_1_fragment_254_k_16.png  \n",
+       "1495  train_splitted/masks/mask_1_fragment_255_k_16.png  \n",
+       "\n",
+       "[1496 rows x 4 columns]"
+      ]
+     },
+     "execution_count": 241,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "N_SPLITS = 10\n",
+    "N_SPLITS = 16\n",
     "\n",
-    "generate_fragments_transformed(1, n_splits=N_SPLITS)"
+    "image_fragments_df = generate_fragments_transformed(1, n_splits=N_SPLITS)\n",
+    "image_fragments_df"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Выведем 20 случайных картинок"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 245,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# from PIL import Image\n",
+    "\n",
+    "# images = []\n",
+    "\n",
+    "# for index, row in image_fragments_df[:20].iterrows():\n",
+    "#   images.append((Image.open(row['image_path']), Image.open(row['mask_path'])))\n",
+    "\n",
+    "# from io import BytesIO\n",
+    "# import PIL\n",
+    "# from IPython.display import display, Image\n",
+    "\n",
+    "# def display_img_array(img, mask):\n",
+    "#     # im1 = PIL.Image.fromarray(img)\n",
+    "#     # im2 = PIL.Image.fromarray(mask)\n",
+    "#     # bio = BytesIO()\n",
+    "#     # im1.save(bio, format='png')\n",
+    "#     # im2.save(bio, format='png')\n",
+    "#     img.show()\n",
+    "#     mask.show()\n",
+    "#     # display(img)\n",
+    "#     # display(mask)\n",
+    "\n",
+    "# for img, mask in images:\n",
+    "#     display_img_array(img, mask)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 224,
    "metadata": {},
    "outputs": [
     {
@@ -377,16 +539,29 @@
        "12"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 224,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "import multiprocessing\n",
+    "from tqdm import tqdm\n",
     "from multiprocessing import Pool\n",
     "num_cores = multiprocessing.cpu_count()\n",
     "num_cores"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# if __name__ == '__main__':\n",
+    "#   with Pool(processes=multiprocessing.cpu_count()) as pool:\n",
+    "    \n",
+    "#     list(tqdm(pool.imap(process_image, args_list), total=len(args_list)))"
    ]
   },
   {
@@ -429,6 +604,22 @@
     "#     with Pool(processes=multiprocessing.cpu_count()) as pool:\n",
     "#         list(tqdm(pool.imap(process_image, args_list), total=len(args_list)))"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Save images addresses to CSV"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "image_fragments_df.to_csv('./metadata.csv', index=False)"
+   ]
   }
  ],
  "metadata": {
@@ -447,7 +638,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "version": "3.11.6"
   }
  },
  "nbformat": 4,
