Upd: image augmentation

--- a/image_generator.ipynb
+++ b/image_generator.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 227,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 228,
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "BASE_IMAGE_DIR_PATH = './train/train/images/'\n",
+    "BASE_MASKS_DIR_PATH = './train/train/masks/'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 229,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,6 +50,32 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "21"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def get_count_of_files_in_dir(dir_name):\n",
+    "\tfiles = os.listdir(dir_name)\n",
+    "\treturn len(files) - 1\n",
+    "\n",
+    "\n",
+    "COUNT_OF_IMAGES = get_count_of_files_in_dir('./train/train/images/')\n",
+    "COUNT_OF_IMAGES"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -48,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 230,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -67,10 +103,10 @@
     "  return f'train_mask_{add_lead_zeros(_id)}.png'\n",
     "\n",
     "def image_path(_id: int):\n",
-    "  return './train/train/images/' + image_name(_id)\n",
+    "  return BASE_IMAGE_DIR_PATH + image_name(_id)\n",
     "\n",
     "def mask_path(_id: int):\n",
-    "  return f'./train/train/masks/' + mask_name(_id)\n"
+    "  return BASE_MASKS_DIR_PATH + mask_name(_id)\n"
    ]
   },
   {
@@ -82,24 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "zsh:1: command not found: pip\n"
-     ]
-    }
-   ],
-   "source": [
-    "!pip install imgaug"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 231,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -148,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 232,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -217,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 234,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -273,6 +292,37 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_augmentated_images(image_id: int, rotation, k: int = 2):\n",
+    "  \n",
+    "  base_image = Image.open(image_path(image_id))\n",
+    "  base_mask = Image.open(mask_path(image_id))\n",
+    "    \n",
+    "  _rotation = next(rotation)\n",
+    "  \n",
+    "  # rotations\n",
+    "  base_image, base_mask = rotate_image(base_image, base_mask, _rotation)\n",
+    "  \n",
+    "  # transform image\n",
+    "  base_image = transform_image(base_image)\n",
+    "  \n",
+    "  _image_name = f'image_{image_id}.png'\n",
+    "  _mask_name = f'mask_{image_id}.png'\n",
+    "  path_image_name = images_folder_path + _image_name\n",
+    "  path_mask_name = masks_folder_path + _mask_name\n",
+    "  base_image.save(path_image_name, quality=95)\n",
+    "  base_mask.save(path_mask_name, quality=95)\n",
+    "  \n",
+    "  index += 1\n",
+    "\n",
+    "  return path_image_name, path_mask_name"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -281,10 +331,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 240,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
+    "final_df = []\n",
+    "\n",
     "def generate_fragments(image_id: int, n_splits: int = 10):\n",
     "  \n",
     "  '''\n",
@@ -303,6 +355,8 @@
     "  Generate fragments using augmentation transform\n",
     "  '''\n",
     "  \n",
+    "  global final_df\n",
+    "  \n",
     "  rotations = []\n",
     "  random.seed(42)\n",
     "  \n",
@@ -319,22 +373,100 @@
     "  for k in range(1, n_splits + 1):\n",
     "    fragments_array += get_fragments(image_id, rotation_generator, k)\n",
     "  \n",
-    "  df = pd.DataFrame(fragments_array)\n",
-    "  headers =  [\"id\", \"n_splits\", \"image_path\", \"mask_path\"]\n",
-    "  df.columns = headers\n",
-    "  return df\n"
+    "  final_df += fragments_array\n",
+    "  # return fragments_array\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "N_SPLITS = 4"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# for image_id in range(COUNT_OF_IMAGES):\n",
+    "for image_id in range(1):\n",
+    "  generate_fragments_transformed(image_id, N_SPLITS)\n",
+    "\n",
+    "\n",
+    "def final_df_to_df(df):\n",
+    "  df = pd.DataFrame(df)\n",
+    "  _headers =  [\"id\", \"n_splits\", \"image_path\", \"mask_path\"]\n",
+    "  df.columns = _headers\n",
+    "  return df\n",
+    "\n",
+    "\n",
+    "final_df = final_df_to_df(final_df)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Сгенерируем фрагменты для картинки с индексом 001"
+    "Аналитика итоговой папки"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 241,
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Вычисление размера выбранной папки...\n",
+      "Выбрана папка: ./train_splitted\n",
+      "Найдено файлов: 110\n",
+      "Размер папки:\n",
+      "347543434 Bytes\n",
+      "331.44 Mb\n",
+      "0.32 Gb\n"
+     ]
+    }
+   ],
+   "source": [
+    "import os\n",
+    "from pathlib import Path\n",
+    "\n",
+    "# Вычисляет размер папки, количество файлов и количество итераций функции\n",
+    "def folderSize(path):\n",
+    "    fsize = 0\n",
+    "    numfile = 0\n",
+    "    iteration = 0\n",
+    "    for file in Path(path).rglob('*'):\n",
+    "        if (os.path.isfile(file)):\n",
+    "            fsize += os.path.getsize(file)\n",
+    "            numfile +=1\n",
+    "        iteration+=1\n",
+    "    return fsize, numfile, iteration\n",
+    "  \n",
+    "  \n",
+    "folder = './train_splitted' # train fragments dir path\n",
+    "\n",
+    "print(\"Вычисление размера выбранной папки...\")\n",
+    "size, numfile, iteration = folderSize(folder)\n",
+    "print(f'Выбрана папка: {folder}')\n",
+    "print(f'Найдено файлов: {numfile}')\n",
+    "print(\"Размер папки:\")\n",
+    "print(f'{size} Bytes')       \n",
+    "print(f'{size/1048576:.2f} Mb')\n",
+    "print(f'{size/1073741824:.2f} Gb')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -367,38 +499,38 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
+       "      <td>0</td>\n",
        "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>train_splitted/images/image_1_fragment_0_k_1.png</td>\n",
-       "      <td>train_splitted/masks/mask_1_fragment_0_k_1.png</td>\n",
+       "      <td>train_splitted/images/image_0_fragment_0_k_1.png</td>\n",
+       "      <td>train_splitted/masks/mask_0_fragment_0_k_1.png</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>1</td>\n",
+       "      <td>0</td>\n",
        "      <td>2</td>\n",
-       "      <td>train_splitted/images/image_1_fragment_0_k_2.png</td>\n",
-       "      <td>train_splitted/masks/mask_1_fragment_0_k_2.png</td>\n",
+       "      <td>train_splitted/images/image_0_fragment_0_k_2.png</td>\n",
+       "      <td>train_splitted/masks/mask_0_fragment_0_k_2.png</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>1</td>\n",
+       "      <td>0</td>\n",
        "      <td>2</td>\n",
-       "      <td>train_splitted/images/image_1_fragment_1_k_2.png</td>\n",
-       "      <td>train_splitted/masks/mask_1_fragment_1_k_2.png</td>\n",
+       "      <td>train_splitted/images/image_0_fragment_1_k_2.png</td>\n",
+       "      <td>train_splitted/masks/mask_0_fragment_1_k_2.png</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>1</td>\n",
+       "      <td>0</td>\n",
        "      <td>2</td>\n",
-       "      <td>train_splitted/images/image_1_fragment_2_k_2.png</td>\n",
-       "      <td>train_splitted/masks/mask_1_fragment_2_k_2.png</td>\n",
+       "      <td>train_splitted/images/image_0_fragment_2_k_2.png</td>\n",
+       "      <td>train_splitted/masks/mask_0_fragment_2_k_2.png</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>1</td>\n",
+       "      <td>0</td>\n",
        "      <td>2</td>\n",
-       "      <td>train_splitted/images/image_1_fragment_3_k_2.png</td>\n",
-       "      <td>train_splitted/masks/mask_1_fragment_3_k_2.png</td>\n",
+       "      <td>train_splitted/images/image_0_fragment_3_k_2.png</td>\n",
+       "      <td>train_splitted/masks/mask_0_fragment_3_k_2.png</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -408,86 +540,90 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1491</th>\n",
-       "      <td>1</td>\n",
-       "      <td>16</td>\n",
-       "      <td>train_splitted/images/image_1_fragment_251_k_1...</td>\n",
-       "      <td>train_splitted/masks/mask_1_fragment_251_k_16.png</td>\n",
+       "      <th>380</th>\n",
+       "      <td>0</td>\n",
+       "      <td>10</td>\n",
+       "      <td>train_splitted/images/image_0_fragment_95_k_10...</td>\n",
+       "      <td>train_splitted/masks/mask_0_fragment_95_k_10.png</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1492</th>\n",
-       "      <td>1</td>\n",
-       "      <td>16</td>\n",
-       "      <td>train_splitted/images/image_1_fragment_252_k_1...</td>\n",
-       "      <td>train_splitted/masks/mask_1_fragment_252_k_16.png</td>\n",
+       "      <th>381</th>\n",
+       "      <td>0</td>\n",
+       "      <td>10</td>\n",
+       "      <td>train_splitted/images/image_0_fragment_96_k_10...</td>\n",
+       "      <td>train_splitted/masks/mask_0_fragment_96_k_10.png</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1493</th>\n",
-       "      <td>1</td>\n",
-       "      <td>16</td>\n",
-       "      <td>train_splitted/images/image_1_fragment_253_k_1...</td>\n",
-       "      <td>train_splitted/masks/mask_1_fragment_253_k_16.png</td>\n",
+       "      <th>382</th>\n",
+       "      <td>0</td>\n",
+       "      <td>10</td>\n",
+       "      <td>train_splitted/images/image_0_fragment_97_k_10...</td>\n",
+       "      <td>train_splitted/masks/mask_0_fragment_97_k_10.png</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1494</th>\n",
-       "      <td>1</td>\n",
-       "      <td>16</td>\n",
-       "      <td>train_splitted/images/image_1_fragment_254_k_1...</td>\n",
-       "      <td>train_splitted/masks/mask_1_fragment_254_k_16.png</td>\n",
+       "      <th>383</th>\n",
+       "      <td>0</td>\n",
+       "      <td>10</td>\n",
+       "      <td>train_splitted/images/image_0_fragment_98_k_10...</td>\n",
+       "      <td>train_splitted/masks/mask_0_fragment_98_k_10.png</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1495</th>\n",
-       "      <td>1</td>\n",
-       "      <td>16</td>\n",
-       "      <td>train_splitted/images/image_1_fragment_255_k_1...</td>\n",
-       "      <td>train_splitted/masks/mask_1_fragment_255_k_16.png</td>\n",
+       "      <th>384</th>\n",
+       "      <td>0</td>\n",
+       "      <td>10</td>\n",
+       "      <td>train_splitted/images/image_0_fragment_99_k_10...</td>\n",
+       "      <td>train_splitted/masks/mask_0_fragment_99_k_10.png</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>1496 rows × 4 columns</p>\n",
+       "<p>385 rows × 4 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "      id  n_splits                                         image_path  \\\n",
-       "0      1         1   train_splitted/images/image_1_fragment_0_k_1.png   \n",
-       "1      1         2   train_splitted/images/image_1_fragment_0_k_2.png   \n",
-       "2      1         2   train_splitted/images/image_1_fragment_1_k_2.png   \n",
-       "3      1         2   train_splitted/images/image_1_fragment_2_k_2.png   \n",
-       "4      1         2   train_splitted/images/image_1_fragment_3_k_2.png   \n",
-       "...   ..       ...                                                ...   \n",
-       "1491   1        16  train_splitted/images/image_1_fragment_251_k_1...   \n",
-       "1492   1        16  train_splitted/images/image_1_fragment_252_k_1...   \n",
-       "1493   1        16  train_splitted/images/image_1_fragment_253_k_1...   \n",
-       "1494   1        16  train_splitted/images/image_1_fragment_254_k_1...   \n",
-       "1495   1        16  train_splitted/images/image_1_fragment_255_k_1...   \n",
+       "     id  n_splits                                         image_path  \\\n",
+       "0     0         1   train_splitted/images/image_0_fragment_0_k_1.png   \n",
+       "1     0         2   train_splitted/images/image_0_fragment_0_k_2.png   \n",
+       "2     0         2   train_splitted/images/image_0_fragment_1_k_2.png   \n",
+       "3     0         2   train_splitted/images/image_0_fragment_2_k_2.png   \n",
+       "4     0         2   train_splitted/images/image_0_fragment_3_k_2.png   \n",
+       "..   ..       ...                                                ...   \n",
+       "380   0        10  train_splitted/images/image_0_fragment_95_k_10...   \n",
+       "381   0        10  train_splitted/images/image_0_fragment_96_k_10...   \n",
+       "382   0        10  train_splitted/images/image_0_fragment_97_k_10...   \n",
+       "383   0        10  train_splitted/images/image_0_fragment_98_k_10...   \n",
+       "384   0        10  train_splitted/images/image_0_fragment_99_k_10...   \n",
        "\n",
-       "                                              mask_path  \n",
-       "0        train_splitted/masks/mask_1_fragment_0_k_1.png  \n",
-       "1        train_splitted/masks/mask_1_fragment_0_k_2.png  \n",
-       "2        train_splitted/masks/mask_1_fragment_1_k_2.png  \n",
-       "3        train_splitted/masks/mask_1_fragment_2_k_2.png  \n",
-       "4        train_splitted/masks/mask_1_fragment_3_k_2.png  \n",
-       "...                                                 ...  \n",
-       "1491  train_splitted/masks/mask_1_fragment_251_k_16.png  \n",
-       "1492  train_splitted/masks/mask_1_fragment_252_k_16.png  \n",
-       "1493  train_splitted/masks/mask_1_fragment_253_k_16.png  \n",
-       "1494  train_splitted/masks/mask_1_fragment_254_k_16.png  \n",
-       "1495  train_splitted/masks/mask_1_fragment_255_k_16.png  \n",
+       "                                            mask_path  \n",
+       "0      train_splitted/masks/mask_0_fragment_0_k_1.png  \n",
+       "1      train_splitted/masks/mask_0_fragment_0_k_2.png  \n",
+       "2      train_splitted/masks/mask_0_fragment_1_k_2.png  \n",
+       "3      train_splitted/masks/mask_0_fragment_2_k_2.png  \n",
+       "4      train_splitted/masks/mask_0_fragment_3_k_2.png  \n",
+       "..                                                ...  \n",
+       "380  train_splitted/masks/mask_0_fragment_95_k_10.png  \n",
+       "381  train_splitted/masks/mask_0_fragment_96_k_10.png  \n",
+       "382  train_splitted/masks/mask_0_fragment_97_k_10.png  \n",
+       "383  train_splitted/masks/mask_0_fragment_98_k_10.png  \n",
+       "384  train_splitted/masks/mask_0_fragment_99_k_10.png  \n",
        "\n",
-       "[1496 rows x 4 columns]"
+       "[385 rows x 4 columns]"
       ]
      },
-     "execution_count": 241,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "N_SPLITS = 16\n",
-    "\n",
-    "image_fragments_df = generate_fragments_transformed(1, n_splits=N_SPLITS)\n",
-    "image_fragments_df"
+    "final_df.head()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -498,39 +634,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 245,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# from PIL import Image\n",
-    "\n",
-    "# images = []\n",
-    "\n",
-    "# for index, row in image_fragments_df[:20].iterrows():\n",
-    "#   images.append((Image.open(row['image_path']), Image.open(row['mask_path'])))\n",
-    "\n",
-    "# from io import BytesIO\n",
-    "# import PIL\n",
-    "# from IPython.display import display, Image\n",
-    "\n",
-    "# def display_img_array(img, mask):\n",
-    "#     # im1 = PIL.Image.fromarray(img)\n",
-    "#     # im2 = PIL.Image.fromarray(mask)\n",
-    "#     # bio = BytesIO()\n",
-    "#     # im1.save(bio, format='png')\n",
-    "#     # im2.save(bio, format='png')\n",
-    "#     img.show()\n",
-    "#     mask.show()\n",
-    "#     # display(img)\n",
-    "#     # display(mask)\n",
-    "\n",
-    "# for img, mask in images:\n",
-    "#     display_img_array(img, mask)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 224,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -539,7 +643,7 @@
        "12"
       ]
      },
-     "execution_count": 224,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -558,10 +662,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# if __name__ == '__main__':\n",
-    "#   with Pool(processes=multiprocessing.cpu_count()) as pool:\n",
-    "    \n",
-    "#     list(tqdm(pool.imap(process_image, args_list), total=len(args_list)))"
+    "if __name__ == '__main__':\n",
+    "  with Pool(processes=num_cores) as pool:\n",
+    "    args_list = []\n",
+    "    list(tqdm(pool.imap(process_image, args_list), total=len(args_list)))"
    ]
   },
   {
@@ -614,11 +718,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
-    "image_fragments_df.to_csv('./metadata.csv', index=False)"
+    "final_df.to_csv('./metadata.prepr.csv', index=False)"
    ]
   }
  ],
