Upd: quadrupled the dataset

--- a/image_augmentation.ipynb
+++ b/image_augmentation.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -53,7 +53,7 @@
        "21"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -147,11 +147,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def get_augmented_images(image_id: int, rotation):\n",
+    "def get_augmented_images(image_id: int, v: int,  rotation):\n",
     "  \n",
     "  base_image = Image.open(image_path(image_id))\n",
     "  base_mask = Image.open(mask_path(image_id))\n",
@@ -164,14 +164,14 @@
     "  # transform image\n",
     "  base_image = transform_image(base_image)\n",
     "  \n",
-    "  _image_name = f'image_{image_id}.png'\n",
-    "  _mask_name = f'mask_{image_id}.png'\n",
+    "  _image_name = f'image_{image_id}_v_{v}.png'\n",
+    "  _mask_name = f'mask_{image_id}_v_{v}.png'\n",
     "  path_image_name = images_folder_path + _image_name\n",
     "  path_mask_name = masks_folder_path + _mask_name\n",
     "  base_image.save(path_image_name, quality=95)\n",
     "  base_mask.save(path_mask_name, quality=95)\n",
     "\n",
-    "  return path_image_name, path_mask_name"
+    "  return image_id, path_image_name, path_mask_name"
    ]
   },
   {
@@ -183,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -197,7 +197,7 @@
     "  rotations = []\n",
     "  random.seed(42)\n",
     "  \n",
-    "  for _ in range(images_count):\n",
+    "  for _ in range(images_count * 4):\n",
     "    rotations.append(random.randint(-180, 180))\n",
     "  \n",
     "  def get_rotation():\n",
@@ -206,14 +206,15 @@
     "  rotation_generator = get_rotation()\n",
     "  \n",
     "  for image_id in range(images_count):\n",
-    "    augmented_images.append(get_augmented_images(image_id, rotation_generator))\n",
+    "    for i in range(4):\n",
+    "      augmented_images.append(get_augmented_images(image_id, i, rotation_generator))\n",
     "  \n",
     "  return augmented_images"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -244,9 +245,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 44,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Вычисление размера выбранной папки...\n",
+      "Выбрана папка: ./train_splitted\n",
+      "Найдено файлов: 168\n",
+      "Размер папки:\n",
+      "3798130542 Bytes\n",
+      "3622.18 Mb\n",
+      "3.54 Gb\n"
+     ]
+    }
+   ],
    "source": [
     "import os\n",
     "from pathlib import Path\n",
