--- a/model/visual_dataset.ipynb
+++ b/model/visual_dataset.ipynb
@@ -2,11 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "Access Denied",
+     "evalue": "Spec c1.4 is not available for your community. Please contact your administrator or Support",
+     "output_type": "error",
+     "traceback": []
+    }
+   ],
    "source": [
-    "from inference_dataset import CVInferenceDataset\n",
+    "from dataset import CVDataset\n",
+    "\n",
     "from torch.cuda import is_available as cuda_is_available\n",
     "from tqdm import tqdm\n",
     "from torch import tensor\n",
@@ -15,22 +23,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "Access Denied",
+     "evalue": "Spec c1.4 is not available for your community. Please contact your administrator or Support",
+     "output_type": "error",
+     "traceback": []
+    }
+   ],
    "source": [
-    "data = CVInferenceDataset('/home/denis/code/satellite_hack/', 3, True, (256,256))"
+    "data = CVDataset('/home/denis/code/satellite_hack/')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mThe Kernel crashed while executing code in the the current cell or a previous cell. Please review the code in the cell(s) to identify a possible cause of the failure. Click <a href='https://aka.ms/vscodeJupyterKernelCrash'>here</a> for more info. View Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
+     ]
+    }
+   ],
    "source": [
-    "index, generator = data[0]\n",
-    "for i, (image_part, target_part) in enumerate(generator):\n",
-    "    data.imshow(image_part, target_part, target_part, f'image{i}')"
+    "for i in range(len(data)):\n",
+    "    index, images, output = data[i]\n",
+    "    data.imshow(images, output, output, f'image_res/image{i}.jpg')"
    ]
   }
  ],
@@ -50,9 +74,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "version": "3.7.7"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
